<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!--android:background="@color/colorPrimaryLight"-->

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/oddmeter_start_stop_fab"
        android:contentDescription="@string/start_stop_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:transitionName="@string/round_button_transition"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="@dimen/normal_met_fab_margin"
        android:src="@android:drawable/ic_media_play"
        app:fabSize="normal"
        app:rippleColor="@color/colorPrimaryLight"
        app:elevation="@dimen/fab_elevation"/>

    <TextView
        android:id="@+id/oddmeter_tempo_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="@dimen/normal_met_tempo_vertical_padding"
        android:paddingBottom="@dimen/normal_met_tempo_vertical_padding"
        android:text="@string/_120"
        android:textColor="@color/primaryText"
        android:textSize="@dimen/odd_met_tempo_font_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpUsage"/>
    
    <com.google.android.flexbox.FlexboxLayout
        android:id="@+id/subdivision_layout"
        app:flexWrap="wrap"
        app:justifyContent="center"
        app:alignItems="flex_start"
        app:alignContent="flex_start"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/oddmeter_tempo_view"
        app:layout_constraintBottom_toTopOf="@+id/extra_subdivision_buttons"
        android:layout_marginLeft="@dimen/flexbox_lr_margin"
        android:layout_marginRight="@dimen/flexbox_lr_margin"
        android:layout_width="0dp"
        android:layout_height="0dp"/>

    <ImageView
        android:id="@+id/delete_button"
        android:contentDescription="@string/remove_a_beat"
        android:layout_width="@dimen/odd_met_subdiv_button_size"
        android:layout_height="@dimen/odd_met_subdiv_button_size"
        app:srcCompat="@android:drawable/ic_delete"
        android:background="@drawable/roundcorner_dark"
        android:layout_marginBottom="@dimen/oddmet_vertical_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/two_subs_button"
        android:layout_marginStart="@dimen/oddmet_vertical_margin"/>

    <TextView
        android:id="@+id/two_subs_button"
        android:contentDescription="@string/add_two_subs"
        style="@style/OddmeterButtonStyle"
        android:text="@string/_2"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/oddmet_vertical_margin"
        app:layout_constraintLeft_toRightOf="@+id/delete_button"
        app:layout_constraintRight_toLeftOf="@+id/three_subs_button"
        android:layout_marginStart="@dimen/odd_met_subdiv_button_margin"
        tools:ignore="SpUsage"/>

    <TextView
        android:id="@+id/three_subs_button"
        android:contentDescription="@string/add_three_subs"
        style="@style/OddmeterButtonStyle"
        android:text="@string/_3"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/oddmet_vertical_margin"
        app:layout_constraintLeft_toRightOf="@+id/two_subs_button"
        app:layout_constraintRight_toLeftOf="@+id/four_subs_button"
        android:layout_marginStart="@dimen/odd_met_subdiv_button_margin"
        android:layout_marginEnd="@dimen/odd_met_subdiv_button_margin"
        tools:ignore="SpUsage"/>

    <TextView
        android:id="@+id/four_subs_button"
        android:contentDescription="@string/add_beat_of_four_subdivisions"
        style="@style/OddmeterButtonStyle"
        android:text="@string/_4"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/oddmet_vertical_margin"
        app:layout_constraintLeft_toRightOf="@+id/three_subs_button"
        app:layout_constraintRight_toLeftOf="@+id/other_subs_button"
        android:layout_marginEnd="@dimen/odd_met_subdiv_button_outer_margin"
        tools:ignore="SpUsage"/>

    <TextView
        android:id="@+id/other_subs_button"
        android:contentDescription="@string/open_other_subdivision_options_button"
        style="@style/OddmeterXtraButtonStyle"
        android:text="@string/elipses"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/oddmet_vertical_margin"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/four_subs_button"
        android:layout_marginEnd="@dimen/odd_met_subdiv_button_outer_margin"
        tools:ignore="SpUsage"/>

    <LinearLayout
        android:id="@+id/extra_subdivision_buttons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        android:gravity="center_horizontal|top"
        app:layout_constraintBottom_toTopOf="@+id/delete_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subdivision_layout">

        <TextView
            android:id="@+id/one_subs_button"
            android:contentDescription="@string/one_sub_beat"
            style="@style/OddmeterXtraButtonStyle"
            android:layout_marginBottom="@dimen/odd_met_subdiv_button_margin"
            android:layout_marginEnd="@dimen/odd_met_subdiv_button_margin"
            android:text="@string/_1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/five_subs_button"
            tools:ignore="SpUsage"/>

        <TextView
            android:id="@+id/five_subs_button"
            android:contentDescription="@string/add_five_beat"
            style="@style/OddmeterXtraButtonStyle"
            android:layout_marginBottom="@dimen/odd_met_subdiv_button_margin"
            android:layout_marginEnd="@dimen/odd_met_subdiv_button_margin"
            android:text="@string/_5"
            app:layout_constraintLeft_toRightOf="@+id/one_subs_button"
            app:layout_constraintRight_toLeftOf="@+id/six_subs_button"
            tools:ignore="SpUsage"/>

        <TextView
            android:id="@+id/six_subs_button"
            android:contentDescription="@string/add_beat_of_six_subdivisions"
            style="@style/OddmeterXtraButtonStyle"
            android:layout_marginBottom="@dimen/odd_met_subdiv_button_margin"
            android:layout_marginEnd="@dimen/odd_met_subdiv_button_margin"
            android:text="@string/_6"
            app:layout_constraintLeft_toRightOf="@+id/five_subs_button"
            app:layout_constraintRight_toLeftOf="@+id/seven_subs_button"
            tools:ignore="SpUsage"/>

        <TextView
            android:id="@+id/seven_subs_button"
            android:contentDescription="@string/add_beat_of_seven_subdivisions"
            style="@style/OddmeterXtraButtonStyle"
            android:layout_marginBottom="@dimen/odd_met_subdiv_button_margin"
            android:layout_marginEnd="@dimen/odd_met_subdiv_button_margin"
            android:text="@string/_7"
            app:layout_constraintLeft_toRightOf="@+id/six_subs_button"
            app:layout_constraintRight_toLeftOf="@+id/eight_subs_button"
            tools:ignore="SpUsage"/>

        <TextView
            android:id="@+id/eight_subs_button"
            android:contentDescription="@string/add_beat_of_eight_subdivisions"
            style="@style/OddmeterXtraButtonStyle"
            android:layout_marginBottom="@dimen/odd_met_subdiv_button_margin"
            android:layout_marginEnd="@dimen/odd_met_subdiv_button_margin"
            android:text="@string/_8"
            app:layout_constraintLeft_toRightOf="@+id/seven_subs_button"
            app:layout_constraintRight_toLeftOf="@+id/nine_subs_button"
            tools:ignore="SpUsage"/>

        <TextView
            android:id="@+id/nine_subs_button"
            android:contentDescription="@string/add_beat_of_nine_subdivisions"
            style="@style/OddmeterXtraButtonStyle"
            android:layout_marginBottom="@dimen/odd_met_subdiv_button_margin"
            android:layout_marginEnd="@dimen/odd_met_subdiv_button_margin"
            android:text="@string/_9"
            app:layout_constraintLeft_toRightOf="@+id/eight_subs_button"
            app:layout_constraintRight_toLeftOf="@+id/ten_subs_button"
            tools:ignore="SpUsage"/>

        <TextView
            android:id="@+id/ten_subs_button"
            android:contentDescription="@string/add_beat_of_ten_subdivisions"
            style="@style/OddmeterXtraButtonStyle"
            android:layout_marginBottom="@dimen/odd_met_subdiv_button_margin"
            android:layout_marginEnd="@dimen/odd_met_subdiv_button_margin"
            android:text="@string/_10"
            app:layout_constraintLeft_toRightOf="@+id/nine_subs_button"
            app:layout_constraintRight_toRightOf="parent"
            tools:ignore="SpUsage"/>

    </LinearLayout>

    <TextView
        android:id="@+id/pulse_multiplier_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_2_equals"
        android:textSize="@dimen/odd_met_multiplier_view_font_size"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBaseline_toBaselineOf="@+id/oddmeter_tempo_view"
        android:layout_marginStart="@dimen/odd_met_multiplier_view_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:ignore="SpUsage"/>

    <CheckBox
        android:id="@+id/include_subdivisions_checkBox"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/clickable_text_min_height"
        android:text="@string/subdivisions"
        android:textSize="@dimen/odd_met_subdiv_checkbox_font_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <FrameLayout
        android:id="@+id/help_overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        android:background="@color/transparentBlack"
        android:elevation="12dp">
        <include layout="@layout/odd_metronome_instructions"
                 android:layout_height="match_parent"
                 android:layout_width="match_parent"
            />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
